--- a/2주차_HTML&CSS기초/index.html
+++ b/2주차_HTML&CSS기초/index.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <h1>김지수</h1>
+    <div class="mainbox">
+        <dix class="title-box">
+            <h1>김지수</h1>
+        </dix>
+
         <section>
-            <h2>ABOUT ME</h2>
+            <h2 style="background-color: bisque; padding:5px;">ABOUT ME</h2>
             <p>숙명여자대학교 IT공학 전공 21학번</p>
         <ul>
             <li>나이: 21</li>
@@ -24,5 +30,6 @@
             <p>관심 분야: 프론트 엔드, 백엔드 개발</p>
             <p>저는 프론트엔드와 백엔드 모두에 관심이 많아 올해 백엔드 파트에 먼저 도전 중입니다! 멋쟁이 사자처럼 10기에서 다양한 개발 지식을 얻어나가고 싶습니다.</p>
         </section>
+    </div>
 </body>
 </html>
